--- a/app/src/main/res/drawable/group_indicator.xml
+++ b/app/src/main/res/drawable/group_indicator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_empty="true" android:drawable="@mipmap/ic_arrow_right"></item>
-    <item android:state_expanded="true" android:drawable="@mipmap/ic_arrow_down"></item>
-    <item android:drawable="@mipmap/ic_arrow_right"></item>
+    <item android:state_empty="true" android:drawable="@drawable/ic_keyboard_arrow_right_black_24dp"></item>
+    <item android:state_expanded="true" android:drawable="@drawable/ic_keyboard_arrow_down_black_24dp"></item>
+    <item android:drawable="@drawable/ic_keyboard_arrow_right_black_24dp"></item>
 </selector>
