fix park details layout. update/add comment in UI in db for rating

--- a/app/src/main/res/layout/activity_park_details.xml
+++ b/app/src/main/res/layout/activity_park_details.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.psu.sweng500.team4.parkpal.ParkDetails">
 
-<<<<<<< HEAD
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -25,42 +24,14 @@
         app:srcCompat="@drawable/campphoto1" />
 
     <LinearLayout
-=======
-
-    <ImageView
-        android:id="@+id/imageView"
->>>>>>> 6fd2e50f160d6fe6951885fb09b6a8570a0068af
         android:layout_width="match_parent"
-        android:layout_height="118dp"
-        android:adjustViewBounds="false"
-        android:cropToPadding="true"
-        android:fitsSystemWindows="false"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/campphoto1" />
-
-    <TextView
-        android:id="@+id/tvLocation"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginTop="75dp"
-        android:layout_alignParentTop="true"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:text="TEST"/>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="118dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:scrollIndicators="right"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -69,7 +40,6 @@
             android:orientation="vertical">
 
             <TextView
-<<<<<<< HEAD
                 android:id="@+id/tvLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,8 +48,6 @@
                 android:textStyle="bold" />
 
             <TextView
-=======
->>>>>>> 6fd2e50f160d6fe6951885fb09b6a8570a0068af
                 android:id="@+id/tvPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -247,6 +215,15 @@
             </LinearLayout>
         </LinearLayout>
 
+
+        <ExpandableListView
+            android:id="@+id/parkNotes"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:groupIndicator="@drawable/group_indicator"
+            android:indicatorRight="25dp"
+            android:transcriptMode="alwaysScroll" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -257,8 +234,6 @@
                 android:id="@+id/textViewAlert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
                 android:text="Recent alerts"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -271,20 +246,8 @@
                 android:indicatorRight="25dp"
                 android:transcriptMode="alwaysScroll"
                 android:visibility="visible" />
+
         </LinearLayout>
-
-        <ExpandableListView
-            android:id="@+id/parkNotes"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:groupIndicator="@drawable/group_indicator"
-            android:indicatorRight="25dp" />
     </LinearLayout>
-
-
-<<<<<<< HEAD
-=======
-    </ScrollView>
->>>>>>> 6fd2e50f160d6fe6951885fb09b6a8570a0068af
 
 </android.support.design.widget.CoordinatorLayout>
